[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/PreGameLobbyPlayerListing.gd" type="Script" id=1]

[node name="MarginContainer" type="MarginContainer"]
margin_right = 320.0
margin_bottom = 34.0
custom_constants/margin_top = 20
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 20.0
margin_right = 320.0
margin_bottom = 52.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 51.0
margin_bottom = 32.0

[node name="PlayerNameLabel" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 51.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/PlayerNameLabel"]
margin_right = 51.0
margin_bottom = 14.0
text = "Talha"

[node name="ScoreLabel" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 18.0
margin_right = 51.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ScoreLabel"]
margin_right = 51.0
margin_bottom = 14.0
text = "Score: 0"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 55.0
margin_right = 243.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="ReadyStatus" type="Label" parent="HBoxContainer"]
margin_left = 247.0
margin_right = 320.0
margin_bottom = 14.0
size_flags_vertical = 0
text = "NOT READY"
